<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:background="@color/cardview_dark_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/republic_poly"
        android:paddingBottom="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#b0b0b0"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/header"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#b0b0b0"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/C203"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/C203"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/C206"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/C206"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/C218"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/C218"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/C235"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/C235"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/C346"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/C346"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/G953"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:text="@string/G953"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>